--- a/Food/src/app/app.component.html
+++ b/Food/src/app/app.component.html
@@ -3,7 +3,5 @@
 </div>
 
 <div class="content">
-  <app-recipes *ngIf="loadedPage === 'recipes'"></app-recipes>
-
-  <app-shopping-list *ngIf="loadedPage !== 'recipes'"></app-shopping-list>
+  <router-outlet></router-outlet>
 </div>
