change EventEmitter to Subject

--- a/Food/src/app/recipes/recipe-detail/recipe-detail.component.html
+++ b/Food/src/app/recipes/recipe-detail/recipe-detail.component.html
@@ -22,7 +22,7 @@
         (click)="addToShoppingList()"
         >Add to Shopping List</mat-button-toggle
       >
-      <mat-button-toggle value="italic">Edit Recipe</mat-button-toggle>
+      <mat-button-toggle value="italic" (click)="onAddRecipe()">Edit Recipe</mat-button-toggle>
       <mat-button-toggle value="underline">Delete Recipe</mat-button-toggle>
     </mat-button-toggle-group>
   </div>
