--- a/Food/src/app/app.component.html
+++ b/Food/src/app/app.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-  <app-header (selectPage)="onNavigate($event)"></app-header>
+  <app-header></app-header>
 </div>
 
 <div class="content">
