--- a/Food/src/app/shopping-list/shopping-list.component.html
+++ b/Food/src/app/shopping-list/shopping-list.component.html
@@ -7,7 +7,8 @@
   <mat-list>
     <mat-list-item
       style="cursor: pointer"
-      *ngFor="let ingredient of ingredients"
+      *ngFor="let ingredient of ingredients; let i = index"
+      (click)="onEditItem(i)"
     >
       {{ ingredient.name }} ({{ ingredient.amount }})
       <mat-divider></mat-divider>
