--- a/Food/src/app/recipes/recipe-edit/recipe-edit.component.html
+++ b/Food/src/app/recipes/recipe-edit/recipe-edit.component.html
@@ -5,10 +5,17 @@
     (ngSubmit)="onSubmit()"
   >
     <div class="edit-recipe-btn">
-      <button mat-raised-button [disabled]="!recipeForm.valid" color="primary">
+      <button
+        mat-raised-button
+        [disabled]="!recipeForm.valid"
+        color="primary"
+        type="submit"
+      >
         Save
       </button>
-      <button mat-raised-button color="warn">Delete</button>
+      <button mat-raised-button color="warn" (click)="onCancel()">
+        Cancel
+      </button>
     </div>
     <mat-form-field appearance="fill">
       <mat-label>Recipe Name... </mat-label>
@@ -17,8 +24,18 @@
 
     <mat-form-field appearance="fill">
       <mat-label>Image URL...</mat-label>
-      <input matInput formControlName="imgPath" />
+      <input matInput formControlName="imgPath" #imgPath />
     </mat-form-field>
+
+    <div *ngIf="imgPath.value">
+      <div class="preview-img">
+        <img
+          [src]="imgPath.value"
+          alt="recipe image"
+          [ngStyle]="{ width: '300px', height: '300px' }"
+        />
+      </div>
+    </div>
 
     <mat-form-field appearance="fill">
       <mat-label>Description...</mat-label>
@@ -39,13 +56,17 @@
           <mat-label>Amount... </mat-label>
           <input type="number" matInput formControlName="amount" />
         </mat-form-field>
-        <button mat-raised-button color="primary">
+        <button
+          mat-raised-button
+          color="primary"
+          type="button"
+          (click)="onDeleteIngredient(i)"
+        >
           <mat-icon aria-hidden="false" aria-label="Example home icon"
             >delete</mat-icon
           >
         </button>
       </div>
-      <hr />
       <div>
         <div>
           <button
@@ -55,6 +76,14 @@
             (click)="onAddIngredient()"
           >
             Add Ingredient
+          </button>
+          <button
+            mat-raised-button
+            color="warn"
+            type="button"
+            (click)="clearAllIngredient()"
+          >
+            Clear All Ingredients
           </button>
         </div>
       </div>
