--- a/Wear/src/app/app.component.css
+++ b/Wear/src/app/app.component.css
@@ -5,8 +5,15 @@
 }
 
 .footer {
+  position: sticky;
+  bottom: 0;
   width: 100%;
   background-color: #f5f5f5;
+}
+
+.header {
+  position: sticky;
+  top: 0;
 }
 
 .example-container {
