--- a/Wear/src/app/products/product-list/product-item/product-item.component.css
+++ b/Wear/src/app/products/product-list/product-item/product-item.component.css
@@ -2,6 +2,12 @@ span {
   font-weight: 600;
   /* font-size: 1.1rem; */
 }
+.product-info {
+  width: 50%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+}
 
 .tags {
   display: flex;
