--- a/Wear/src/app/products/product-list/product-item/product-item.component.html
+++ b/Wear/src/app/products/product-list/product-item/product-item.component.html
@@ -11,7 +11,7 @@
       'justify-content': 'space-evenly'
     }"
   >
-    <div>
+    <div class="product-info">
       <div class="product-name">
         <span>Product Name:</span>
         {{ product.productTitle }}
