--- a/Wear/src/app/products/products.component.css
+++ b/Wear/src/app/products/products.component.css
@@ -1,6 +1,7 @@
 .search {
-  width: 80%;
-  margin-left: 10%;
+  width: 60%;
+  margin-left: 20%;
+  margin-top: 10px;
   /* display: flex; */
   /* justify-content: center; */
 }
@@ -9,7 +10,7 @@
   display: flex;
   flex-direction: row;
   justify-content: space-evenly;
-  margin-top: 2%;
+  margin-top: 3%;
 }
 .app-product-list {
   overflow: auto;
