--- a/Wear/src/app/header/header.component.html
+++ b/Wear/src/app/header/header.component.html
@@ -8,7 +8,7 @@
         <a routerLink="/products">Products</a>
       </li>
       <li routerLinkActive="active" class="subheader-item">
-        <a routerLink="/shopping-list">Shopping List</a>
+        <a routerLink="/shopping-list">Shopping cart</a>
       </li>
       <li id="toggle-btn" class="subheader-item">
         <ng-content select="a"></ng-content>
