--- a/Wear/src/app/products/product-list/product-item/product-item.component.html
+++ b/Wear/src/app/products/product-list/product-item/product-item.component.html
@@ -16,6 +16,9 @@
         <span>Product Name:</span>
         {{ product.productTitle }}
       </div>
+      <div>
+        <span>Price: &nbsp; ${{ product.price }}</span>
+      </div>
       <div class="tags-box">
         <span>Tags:</span>
         <hr />
