--- a/Wear/src/app/app.component.html
+++ b/Wear/src/app/app.component.html
@@ -1,10 +1,10 @@
 <div class="header">
-  <app-header
-    ><a type="button" (click)="drawer.toggle()"> explore now >> </a>
+  <app-header>
+    <!-- <a type="button" (click)="drawer.toggle()"> explore more >> </a> -->
   </app-header>
 </div>
 
-<mat-drawer-container class="example-container" autosize>
+<!-- <mat-drawer-container class="example-container" autosize>
   <mat-drawer #drawer class="example-sidenav" mode="side">
     <p>gender</p>
     <p *ngIf="showFiller">xx</p>
@@ -12,9 +12,9 @@
       Toggle extra text
     </button>
   </mat-drawer>
-  <router-outlet></router-outlet>
-</mat-drawer-container>
+</mat-drawer-container> -->
 
+<router-outlet></router-outlet>
 <div class="footer">
   <app-footer></app-footer>
 </div>
