set up shoppping list and checkout area

--- a/Wear/src/app/not-found/not-found.component.html
+++ b/Wear/src/app/not-found/not-found.component.html
@@ -1,1 +1,7 @@
-<p>not-found works!</p>
+<div class="not-found-container">
+  <div class="not-found-box">
+    <h2>404</h2>
+    <br>
+    <p>Sorry, the resource you accessed does not exist!</p>
+  </div>
+</div>
