--- a/Wear/src/app/products/product-start/product-start.component.html
+++ b/Wear/src/app/products/product-start/product-start.component.html
@@ -1,1 +1,5 @@
-<p>product-start works!</p>
+<div class="start-container">
+  <div class="start-box">
+    <p class="start-title">Please pick a product !</p>
+  </div>
+</div>
