--- a/Wear/src/app/footer/footer.component.html
+++ b/Wear/src/app/footer/footer.component.html
@@ -1,7 +1,7 @@
 <div class="footer-container">
   <div>
     <ul class="footer-box">
-      <li class="footer-item"><a> Home </a></li>
+      <li class="footer-item" routerLink="/products"><a> Home </a></li>
       <li class="footer-item"><a> About us </a></li>
       <li class="footer-item"><a> Instagram </a></li>
       <li class="footer-item"><a> Twitter </a></li>
