--- a/Wear/src/app/products/product-detail/product-detail.component.html
+++ b/Wear/src/app/products/product-detail/product-detail.component.html
@@ -14,11 +14,16 @@
   </div>
   <div class="recipe-items">
     <mat-button-toggle-group name="fontStyle" aria-label="Font Style">
-      <mat-button-toggle value="bold" style="cursor: pointer"
+      <mat-button-toggle
+        value="bold"
+        style="cursor: pointer"
+        (click)="addToShoppingList()"
         >Add to Shopping List</mat-button-toggle
       >
-      <mat-button-toggle value="italic">Edit Product</mat-button-toggle>
-      <mat-button-toggle value="underline">Delete Product</mat-button-toggle>
+      <mat-button-toggle value="italic" (click)="onAddProduct()"
+        >Edit Product</mat-button-toggle
+      >
+      <mat-button-toggle value="underline" (click)="onDeleteProduct()" >Delete Product</mat-button-toggle>
     </mat-button-toggle-group>
   </div>
   <div class="recipe-items">
