--- a/Wear/src/app/products/product-edit/product-edit.component.html
+++ b/Wear/src/app/products/product-edit/product-edit.component.html
@@ -1,1 +1,73 @@
-<p>product-edit works!</p>
+<div class="edit-recipe-box">
+  <form
+    [formGroup]="productForm"
+    class="edit-recipe-form"
+    (ngSubmit)="onSubmit()"
+  >
+    <div class="edit-recipe-btn">
+      <button
+        mat-raised-button
+        [disabled]="!productForm.valid"
+        color="primary"
+        type="submit"
+      >
+        Save
+      </button>
+      <button mat-raised-button color="warn" (click)="onCancel()">
+        Cancel
+      </button>
+    </div>
+    <mat-form-field appearance="fill">
+      <mat-label>Product ID</mat-label>
+      <input matInput formControlName="productId" #imgPath />
+    </mat-form-field>
+    <mat-form-field appearance="fill">
+      <mat-label>Product Name </mat-label>
+      <input matInput formControlName="productTitle" />
+    </mat-form-field>
+
+    <div *ngIf="imgPath.value">
+      <div class="preview-img">
+        <img
+          src="{{ productForm.value.productImg }}"
+          alt="{{ productForm.value.name }}"
+          [ngStyle]="{ width: '300px', height: '300px' }"
+        />
+      </div>
+    </div>
+    <mat-form-field appearance="fill">
+      <mat-label>Image URL</mat-label>
+      <input matInput formControlName="productImg" #imgPath />
+    </mat-form-field>
+
+    <mat-form-field appearance="fill">
+      <mat-label>Price</mat-label>
+      <input matInput formControlName="price" />
+    </mat-form-field>
+    <mat-form-field appearance="fill">
+      <mat-label>Gender</mat-label>
+      <input matInput formControlName="gender" />
+    </mat-form-field>
+    <mat-form-field appearance="fill">
+      <mat-label>Color</mat-label>
+      <input matInput formControlName="color" />
+    </mat-form-field>
+    <mat-form-field appearance="fill">
+      <mat-label>Category</mat-label>
+      <input matInput formControlName="category" />
+    </mat-form-field>
+
+    <mat-form-field appearance="fill">
+      <mat-label>SubCategory</mat-label>
+      <input matInput formControlName="subCategory" />
+    </mat-form-field>
+    <mat-form-field appearance="fill">
+      <mat-label>Type</mat-label>
+      <input matInput formControlName="productType" />
+    </mat-form-field>
+    <mat-form-field appearance="fill">
+      <mat-label>Usage</mat-label>
+      <input matInput formControlName="usage" />
+    </mat-form-field>
+  </form>
+</div>
