--- a/Wear/src/app/products/product-list/product-list.component.css
+++ b/Wear/src/app/products/product-list/product-list.component.css
@@ -1,7 +1,14 @@
-div.product-list {
+.list-btn-container {
   position: relative;
 }
 .product-list {
+  position: relative;
   height: 60%;
   overflow: auto;
+}
+
+button.list-btn {
+  position: -webkit-sticky;
+  position: sticky;
+  top: 0;
 }
