--- a/Wear/src/app/products/products.component.html
+++ b/Wear/src/app/products/products.component.html
@@ -1,19 +1,10 @@
-<!-- <div>
+
+<a type="button" class="button" (click)="drawer.toggle()"> explore more >> </a>
+<div>
   <div class="search">
     <app-search></app-search>
   </div>
 </div>
-
-<div class="main">
-  <div class="app-product-list">
-    <app-product-list></app-product-list>
-  </div>
-  <div class="app-product-detail">
-    <router-outlet></router-outlet>
-  </div>
-</div> -->
-<a type="button" (click)="drawer.toggle()"> explore more >> </a>
-
 <mat-drawer-container class="example-container" autosize>
   <mat-drawer #drawer class="example-sidenav" mode="side">
     <p>gender</p>
@@ -22,11 +13,6 @@
       Toggle extra text
     </button>
   </mat-drawer>
-  <div>
-    <div class="search">
-      <app-search></app-search>
-    </div>
-  </div>
 
   <div class="main">
     <div class="app-product-list">
