--- a/Wear/src/app/shopping-list/shopping-list.component.css
+++ b/Wear/src/app/shopping-list/shopping-list.component.css
@@ -1,11 +1,23 @@
-/* .list-container {
-  width: 100%;
+.shopping-list-page {
   display: flex;
-  justify-content: center;
-} */
+  flex-direction: row;
+  justify-content: space-around;
+  width: 100%;
+  overflow: auto;
+}
+.list-container {
+  width: 60%;
+  overflow: auto;
+}
+.shopping-checkout {
+  width: 40%;
+}
+
 .list-container-box {
   width: 100%;
+  margin-top: 10px;
   display: flex;
+  flex-direction: column;
   justify-content: center;
 }
 .list-name {
@@ -17,21 +29,66 @@
 
 .list-item {
   display: block;
-  margin-right: 10px;
+  padding: 0;
+  /* margin-right: 10px; */
+}
+.list-item-img {
+  width: 30%;
+}
+
+.list-item-des {
+  width: 50%;
+}
+.list-item-btn {
+  width: 20%;
+}
+
+.list-item-empty {
+  font-family: "Bebas Neue", cursive;
+  font-family: "Dancing Script", cursive;
+  font-size: 2rem;
+  margin-left: 300px;
+  margin-top: 150px;
+  color: #6d6875;
+  letter-spacing: 3px;
+  line-height: 1rem;
+}
+.goback-product {
+  margin-top: 30px;
 }
 
 mat-list-item.list-main {
   padding: 0;
-  margin: 0;
-  width: 80%;
+  margin-left: 20%;
+  width: 60%;
   height: auto;
   display: flex;
   flex-direction: row;
   justify-content: space-evenly;
   align-items: center;
+  border-bottom: 1px solid black;
+}
+
+mat-list-item:hover {
+  background-color: #f8edeb;
 }
 
 a {
   text-decoration: none;
   color: black;
 }
+
+.goback-product:hover {
+  color: #b5838d;
+  /* transform: translateY(-3px); */
+}
+
+a > mat-icon:hover {
+  color: #b5838d;
+}
+
+/* app-shopping-checkout {
+  width: 100%;
+  height: 100%;
+  position: fixed;
+} */
