--- a/Wear/src/app/shopping-list/shopping-list.component.html
+++ b/Wear/src/app/shopping-list/shopping-list.component.html
@@ -1,30 +1,46 @@
-<div class="list-container">
-  <div class="list-name">YOUR SHOPPING CART:</div>
-  <mat-list class="list-container-box">
-    <mat-list-item
-      class="list-main"
-      style="cursor: pointer"
-      *ngFor="let product of products; let i = index"
-    >
-      <div class="list-item">
-        <img
-          [src]="product.productImg"
-          alt=""
-          [ngStyle]="{ 'width.px': '100', 'height.px': '100' }"
-        />
-      </div>
-
-      <div class="list-item">
-        <div>
-          <a href="">{{ product.productTitle }}</a>
+<div class="shopping-list-page">
+  <div class="list-container">
+    <div class="list-name">YOUR SHOPPING CART:</div>
+    <mat-list class="list-container-box">
+      <mat-list-item
+        class="list-main"
+        style="cursor: pointer"
+        *ngFor="let product of products; let i = index"
+      >
+        <div class="list-item list-item-img">
+          <img
+            [src]="product.productImg"
+            alt=""
+            [ngStyle]="{ 'width.px': '100', 'height.px': '100' }"
+          />
         </div>
-        <div>Price: $ {{ product.price }}</div>
-      </div>
 
-      <div class="list-item">
-        <button mat-button>X</button>
+        <div class="list-item list-item-des">
+          <div>
+            <a href="">{{ product.productTitle }}</a>
+          </div>
+          <div>Price: $ {{ product.price }}</div>
+        </div>
+
+        <div class="list-item list-item-btn">
+          <button mat-button (click)="deleteProduct(i)">X</button>
+        </div>
+      </mat-list-item>
+    </mat-list>
+    <div class="list-item-empty" *ngIf="products.length < 1">
+      <p>Shopping cart is empty!</p>
+      <div class="goback-product" routerLink= '/products'>
+        <span>Let's go shopping now!</span> &nbsp;
+        <a href=""
+          ><mat-icon aria-hidden="false" aria-label="Example home icon"
+            >pets</mat-icon
+          ></a
+        >
       </div>
-    </mat-list-item>
-    <mat-divider></mat-divider>
-  </mat-list>
+    </div>
+  </div>
+
+  <div class="shopping-checkout">
+    <app-shopping-checkout></app-shopping-checkout>
+  </div>
 </div>
