--- a/Wear/src/app/products/search/search.component.html
+++ b/Wear/src/app/products/search/search.component.html
@@ -1,8 +1,11 @@
 <div class="search-box">
-  <input
-    type="text"
-    id="search"
-    name="search"
-    placeholder="search products here..."
-  />
+  <form #f="ngForm" (ngSubmit)="onSubmit(f)">
+    <input
+      type="text"
+      id="search"
+      name="search"
+      placeholder="search products here..."
+      ngModel
+    />
+  </form>
 </div>
