--- a/Wear/src/app/products/product-detail/product-detail.component.html
+++ b/Wear/src/app/products/product-detail/product-detail.component.html
@@ -5,12 +5,12 @@
 
   <img
     class="recipe-items"
-    [src]="product.productImg"
-    alt=" {{ product.productImg }}"
+    [src]="product.ImageURL"
+    alt=" {{ product.ProductTitle }}"
   />
 
   <div class="recipe-name">
-    <p class="recipe-items">Product name: {{ product.category }}</p>
+    <p class="recipe-items">Product name: {{ product.ProductTitle }}</p>
   </div>
   <div class="recipe-items">
     <mat-button-toggle-group name="fontStyle" aria-label="Font Style">
@@ -23,11 +23,13 @@
       <mat-button-toggle value="italic" (click)="onAddProduct()"
         >Edit Product</mat-button-toggle
       >
-      <mat-button-toggle value="underline" (click)="onDeleteProduct()" >Delete Product</mat-button-toggle>
+      <mat-button-toggle value="underline" (click)="onDeleteProduct()"
+        >Delete Product</mat-button-toggle
+      >
     </mat-button-toggle-group>
   </div>
   <div class="recipe-items">
-    <div>Description: {{ product.productTitle }}</div>
+    <div>Description: {{ product.ProductTitle }}</div>
     <!-- <mat-expansion-panel
       (opened)="panelOpenState = true"
       (closed)="panelOpenState = false"
