--- a/Wear/src/app/products/product-edit/product-edit.component.html
+++ b/Wear/src/app/products/product-edit/product-edit.component.html
@@ -19,55 +19,55 @@
     </div>
     <mat-form-field appearance="fill">
       <mat-label>Product ID</mat-label>
-      <input matInput formControlName="productId" #imgPath />
+      <input matInput formControlName="ProductId" #imgPath />
     </mat-form-field>
     <mat-form-field appearance="fill">
       <mat-label>Product Name </mat-label>
-      <input matInput formControlName="productTitle" />
+      <input matInput formControlName="ProductTitle" />
     </mat-form-field>
 
     <div *ngIf="imgPath.value">
       <div class="preview-img">
         <img
-          src="{{ productForm.value.productImg }}"
-          alt="{{ productForm.value.name }}"
+          src="{{ productForm.value.ImageURL }}"
+          alt="{{ productForm.value.ProductTitle }}"
           [ngStyle]="{ width: '300px', height: '300px' }"
         />
       </div>
     </div>
     <mat-form-field appearance="fill">
       <mat-label>Image URL</mat-label>
-      <input matInput formControlName="productImg" #imgPath />
+      <input matInput formControlName="ImageURL" #imgPath />
     </mat-form-field>
 
     <mat-form-field appearance="fill">
       <mat-label>Price</mat-label>
-      <input matInput formControlName="price" />
+      <input matInput formControlName="Price" />
     </mat-form-field>
     <mat-form-field appearance="fill">
       <mat-label>Gender</mat-label>
-      <input matInput formControlName="gender" />
+      <input matInput formControlName="Gender" />
     </mat-form-field>
     <mat-form-field appearance="fill">
       <mat-label>Color</mat-label>
-      <input matInput formControlName="color" />
+      <input matInput formControlName="Colour" />
     </mat-form-field>
     <mat-form-field appearance="fill">
       <mat-label>Category</mat-label>
-      <input matInput formControlName="category" />
+      <input matInput formControlName="Category" />
     </mat-form-field>
 
     <mat-form-field appearance="fill">
       <mat-label>SubCategory</mat-label>
-      <input matInput formControlName="subCategory" />
+      <input matInput formControlName="SubCategory" />
     </mat-form-field>
     <mat-form-field appearance="fill">
       <mat-label>Type</mat-label>
-      <input matInput formControlName="productType" />
+      <input matInput formControlName="ProductType" />
     </mat-form-field>
     <mat-form-field appearance="fill">
       <mat-label>Usage</mat-label>
-      <input matInput formControlName="usage" />
+      <input matInput formControlName="Usage" />
     </mat-form-field>
   </form>
 </div>
