--- a/Wear/src/app/shopping-list/shopping-list.component.html
+++ b/Wear/src/app/shopping-list/shopping-list.component.html
@@ -30,12 +30,7 @@
     <div class="list-item-empty" *ngIf="products.length < 1">
       <p>Shopping cart is empty!</p>
       <div class="goback-product" routerLink="/products">
-        <span>Let's go shopping now!</span> &nbsp;
-        <a href=""
-          ><mat-icon aria-hidden="false" aria-label="Example home icon"
-            >pets</mat-icon
-          ></a
-        >
+        <span>Let's go shopping now!</span>
       </div>
     </div>
   </div>
