--- a/Wear/src/app/header/header.component.html
+++ b/Wear/src/app/header/header.component.html
@@ -15,7 +15,7 @@
       </li>
     </ul>
 
-    <span (click)="onLogin()">login Here</span>
+    <span (click)="onLogin()" routerLink="/auth">login Here</span>
     <button mat-button [matMenuTriggerFor]="menu" id="toggle-menu">
       <mat-icon aria-hidden="false" aria-label="Example home icon"
         >menu</mat-icon
