--- a/Wear/src/app/footer/footer.component.html
+++ b/Wear/src/app/footer/footer.component.html
@@ -1,10 +1,20 @@
 <div class="footer-container">
   <div>
     <ul class="footer-box">
-      <li class="footer-item" routerLink="/products"><a> Home </a></li>
-      <li class="footer-item"><a> About us </a></li>
-      <li class="footer-item"><a> Instagram </a></li>
-      <li class="footer-item"><a> Twitter </a></li>
+      <li class="footer-item" routerLink="/products">
+        <mat-icon aria-hidden="false" aria-label="Example home icon"
+          >pets</mat-icon
+        ><a> Home </a>
+      </li>
+      <!-- <li class="footer-item"><a> About us </a></li>
+      <li class="footer-item"><a> Instagram </a></li> -->
+      <li class="footer-item">
+        <a> Copyright</a
+        ><mat-icon aria-hidden="false" aria-label="Example home icon"
+          >copyright</mat-icon
+        >
+        <a>2021 Jing Jiang Reserved.</a>
+      </li>
     </ul>
   </div>
 </div>
