admin authentication and authricattion done

--- a/Wear/src/app/header/header.component.html
+++ b/Wear/src/app/header/header.component.html
@@ -52,7 +52,7 @@
       </button>
       <button mat-menu-item>
         Logout
-        <mat-icon aria-hidden="false" aria-label="Example home icon"
+        <mat-icon aria-hidden="false" aria-label="Example home icon" (click)="onLogout()"
           >logout</mat-icon
         >
       </button>
