--- a/Wear/src/app/auth/admin-auth/admin-auth.component.html
+++ b/Wear/src/app/auth/admin-auth/admin-auth.component.html
@@ -35,7 +35,7 @@
       </div>
 
       <div class="one-col-input">
-        <button id="register-login" [disabled]="!adminForm.valid">Login</button>
+        <button id="register-login" [disabled]="!adminForm.valid" type="submit">Login</button>
       </div>
     </form>
   </div>
